--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div id="main">
                         <article class="thumb">
 							<img src="images/thumbs/Teal.png" alt="" />
-							<h2>Kathleen Smith's Writing Samples →</h2>
+							<h2>Kathleen Smith's Writing Samples ↓ →</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/forsythe_collage2.png" class="image"><img src="images/thumbs/forsythe.png" alt="" /></a>
@@ -58,7 +58,7 @@
                             <a href="https://nowtoronto.com/culture/house-mix-marks-a-satisfying-end-to-christopher-houses-toronto-dance-theatre-tenure/">NOW weekly</a><br>
                             <a href="https://danceinternational.org/fall-for-dance-north-a-jazz-double-bill-thats-smart-and-sassy/">Dance International</a>
                              <br><p></p>
-                            <h6>Images by Karolina Kuras and Guntar Kravis</h6>
+                            <h6>Images by Jamie Kronick and Guntar Kravis</h6>
                             <p></p>
 						</article>
 						<article class="thumb">
@@ -115,7 +115,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/lime.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
+							<a href="images/fulls/dancepluswords2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
 							<h2>dance+words collective</h2>
 							<p>An initiative to disseminate ideas and facilitate conversations around dance and movement arts across Canada, dance + words aims to combine old school journalistic values with new technological tools and an inter-generational, inclusive, respectful and curious attitude towards thinking about and engaging with the Canadian dance scene. Recent projects include the Wikipedia Dance Project, Critical Conversations podcast and a filmed exploration of the concept of archive.</p>
                             <p><a href="https://dancepluswords.ca/">Link to the website</a></p>
@@ -155,8 +155,8 @@
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
 								
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://rsf.org/en" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/hellokathleensmith/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										
 									</ul>
