--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <a href="https://nowtoronto.com/culture/house-mix-marks-a-satisfying-end-to-christopher-houses-toronto-dance-theatre-tenure/">NOW weekly</a><br>
                             <a href="https://danceinternational.org/fall-for-dance-north-a-jazz-double-bill-thats-smart-and-sassy/">Dance International</a>
                              <br><p></p>
-                            <h6>Images by Jamie Kronick and Guntar Kravis</h6>
+                            <h6>Image of Ben Kamino by Jamie Kronick / TDT by Guntar Kravis</h6>
                             <p></p>
 						</article>
 						<article class="thumb">
@@ -84,9 +84,15 @@
                             <p></p>
 						</article>            
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
+                             <a href="writing/Siphesihle%20November,%20National%20Ballet%20of...ured%20Toronto%E2%80%99s%20Heart%20-%20Pointe%20Magazine.pdf">Download</a>
+							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
 							<h2>Profile: Helen Pickett</h2>
-							<p>Image by Karolina Kuras</p>
+                            <p>November 2023 / Pointe Magazine</p>
+                            <p>Excerpt:<i>"I have wondered at times if Flaubert was a synesthete because of his descriptions,” says Pickett. “I mean, you can taste the apricot, you can smell Emma’s garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses. I want to break the fourth wall and have the work land on the audience’s skin".</i></p>
+                            <a href="writing/Helen%20Pickett%20on%20Choreographing%20Emma%20Bo...nal%20Ballet%20of%20Canada%20-%20Pointe%20Magazine.pdf">Download</a>
+                            <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
+							<h6>Image by Karolina Kuras</h6>
+                            <p></p>
 						</article>
                          <article class="thumb">
 							<a href="images/fulls/evolving3.png" class="image"><img src="images/thumbs/orange_magpies.png" alt="" /></a>
@@ -110,9 +116,12 @@
 						</article>
                        
                         <article class="thumb">
-							<a href="images/fulls/mint.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
+							<a href="images/fulls/academic.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
 							<h2>Academic: Love, Death and Modernity</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+                            <p>2023 / All That Is Solid Melts into Air: Visions of Love, Death and Modernity in James Joyce’s “The Dead” and Virginia Woolf’s “Kew Gardens”</p>
+							<p>Excerpt: <i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i>.</p>
+                             <a href="writing/AllThatIsSolid.pdf">Download</a>
+                            <p></p>
 						</article>
                         <article class="thumb">
 							<a href="images/fulls/dancepluswords2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
