--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <h2>Profile: Helen Pickett</h2>
                             <p>November 2023 / Pointe Magazine</p>
                             <p>Excerpt:<i>"I have wondered at times if Flaubert was a synesthete because of his descriptions,” says Pickett. “I mean, you can taste the apricot, you can smell Emma’s garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses. I want to break the fourth wall and have the work land on the audience’s skin".</i></p>
-                            <a href="writing/Helen%20Pickett.pdf">Download</a>
+                            <a href="writing/Helen%20Pickett%20on%20Choreographing%20Emma%20Bo...nal%20Ballet%20of%20Canada%20-%20Pointe%20Magazine.pdf">Download</a>
                             <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
 							<h6>Image by Karolina Kuras</h6>
                             <p></p>
@@ -118,7 +118,8 @@
 							<a href="images/fulls/academic.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
 							<h2>Academic: Love, Death and Modernity</h2>
                             <p>2023 / All That Is Solid Melts into Air: Visions of Love, Death and Modernity in James Joyce’s “The Dead” and Virginia Woolf’s “Kew Gardens”</p>
-							<p>Excerpt: <i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i></p>
+							<p>Excerpt:<i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i></p>
+                             <a href="writing/AllThatIsSolid.pdf">Download</a>
                             <p></p>
 						</article>
                         <article class="thumb">
