--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <h2>Profile: Helen Pickett</h2>
                             <p>November 2023 / Pointe Magazine</p>
                             <p>Excerpt:<i>"I have wondered at times if Flaubert was a synesthete because of his descriptions,” says Pickett. “I mean, you can taste the apricot, you can smell Emma’s garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses. I want to break the fourth wall and have the work land on the audience’s skin".</i></p>
-                            <a href="writing/Helen%20Pickett%20on%20Choreographing%20Emma%20Bo...nal%20Ballet%20of%20Canada%20-%20Pointe%20Magazine.pdf">Download</a>
+                            <a href="writing/Helen Pickett.pdf">Download</a>
                             <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
 							<h6>Image by Karolina Kuras</h6>
                             <p></p>
