--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <a href="writing/Siphesihle%20November,%20National%20Ballet%20of...ured%20Toronto%E2%80%99s%20Heart%20-%20Pointe%20Magazine.pdf">Download</a>
                            <p><a href="https://pointemagazine.com/siphesihle-november/#">Link to online text</a></p>
                              <h6>Images by Karolina Kuras</h6>
-                            <p></p>
+                            <p>no</p>
 						</article>            
 						<article class="thumb">
 							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
@@ -102,6 +102,7 @@
                            <p><a href="https://pointemagazine.com/siphesihle-november/#">Link to online text</a></p>
                              <h6>Images by Karolina Kuras</h6>
                             <p></p>
+							</article>
                          <article class="thumb">
 							<a href="images/fulls/evolving3.png" class="image"><img src="images/thumbs/orange_magpies.png" alt="" /></a>
 							<h2>Feature: The Evolving Story of Dance on Film</h2>
