--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/siphe4.png" class="image"><img src="images/thumbs/Siphe.png" alt="" /></a>
+							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
 							<h2>Profile:Helen Pickett</h2>
 				            <p>November 2023/ Pointe Magazine</p>
                              <p> Put text here</p> 
@@ -103,6 +103,7 @@
                              <h6>Images by Karolina Kuras</h6>
                             <p></p>
 							</article>
+						
                          <article class="thumb">
 							<a href="images/fulls/evolving3.png" class="image"><img src="images/thumbs/orange_magpies.png" alt="" /></a>
 							<h2>Feature: The Evolving Story of Dance on Film</h2>
