--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
-							<h2>Profile:Helen Pickett</h2>
+							<h2>Profile: Helen Pickett</h2>
 				            <p>November 2023/ Pointe Magazine</p>
                              <p> Put text here</p> 
                 
-                           <p><a href="https://pointemagazine.com/siphesihle-november/#">Link to online text</a></p>
+                           <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
                              <h6>Images by Karolina Kuras</h6>
                             <p></p>
 							</article>
