--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
+							<a href="images/fulls/Teal.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
 							<h2>Profile: Helen Pickett</h2>
 				            <p>November 2023/ Pointe Magazine</p>
                              <p> Put text here and here</p> 
