--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<a href="images/fulls/Teal.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
 							<h2>Profile: Helen Pickett</h2>
 				            <p>November 2023/ Pointe Magazine</p>
-                             <p> Put text here and here</p> 
+                             <p><i>"I have wondered at times if Flaubert was a synesthete because of his descriptions," says Pickett. "I mean, you can taste the apriicot, you can smell Emma's garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses."</i></p> 
                 
                            <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
                              <h6>Images by Karolina Kuras</h6>
