--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						</article>
                        
                         <article class="thumb">
-							<a href="images/fulls/academic.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
+							<a href="images/fulls/Teal.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
 							<h2>Academic: Love, Death and Modernity</h2>
                             <p>2023 / All That Is Solid Melts into Air: Visions of Love, Death and Modernity in James Joyce’s “The Dead” and Virginia Woolf’s “Kew Gardens”</p>
 							<p>Excerpt:<i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i></p>
@@ -134,7 +134,7 @@
                             <p></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/dancepluswords2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
+							<a href="images/fulls/Teal.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
 							<h2>dance+words collective</h2>
 							<p>An initiative to disseminate ideas and facilitate conversations around dance and movement arts across Canada, dance + words aims to combine old school journalistic values with new technological tools and an inter-generational, inclusive, respectful and curious attitude towards thinking about and engaging with the Canadian dance scene. Recent projects include the Wikipedia Dance Project, Critical Conversations podcast and a filmed exploration of the concept of archive.</p>
                             <p><a href="https://dancepluswords.ca/">Link to the website</a></p>
