--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<h2>Profile: Helen Pickett</h2>
 				            <p>November 2023/ Pointe Magazine</p>
                              <p><i>"I have wondered at times if Flaubert was a synesthete because of his descriptions," says Pickett. "I mean, you can taste the apriicot, you can smell Emma's garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses."</i></p> 
-                
+                 <a href="writing/Helen Pickett.pdf">Download</a>
                            <p><a href="https://pointemagazine.com/helen-pickett-emma-bovary-national-ballet-of-canada/">Link to online text</a></p>
                              <h6>Images by Karolina Kuras</h6>
                             <p></p>
