--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</article>
                        
                         <article class="thumb">
-							<a href="images/fulls/Teal.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
+							<a href="images/fulls/Mustard.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="" /></a>
 							<h2>Academic: Love, Death and Modernity</h2>
                             <p>2023 / All That Is Solid Melts into Air: Visions of Love, Death and Modernity in James Joyce’s “The Dead” and Virginia Woolf’s “Kew Gardens”</p>
 							<p>Excerpt:<i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i></p>
