--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <p></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/DW2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
+							<a href="images/fulls/dancepluswords2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="" /></a>
 							<h2>dance+words collective</h2>
 							<p>An initiative to disseminate ideas and facilitate conversations around dance and movement arts across Canada, dance + words aims to combine old school journalistic values with new technological tools and an inter-generational, inclusive, respectful and curious attitude towards thinking about and engaging with the Canadian dance scene. Recent projects include the Wikipedia Dance Project, Critical Conversations podcast and a filmed exploration of the concept of archive.</p>
                             <p><a href="https://dancepluswords.ca/">Link to the website</a></p>
