--- a/index.html
+++ b/index.html
@@ -151,12 +151,9 @@
 									<p>Kathleen Smith is a Toronto-based writer  and web designer with an interest in the arts. She has worked as a performer, producer, curator and creative director, and is the recipient of numerous arts grants for personal projects, and as a member of the dance+words collective.</p>
  
                                     <p>Kathleen’s written work spans many forms, both print and digital, creative and critical.
-                                        In legacy print media, she has written for the Globe and Mail, the Toronto Star, NOW Weekly, Toronto Life Fashion, House and Home, Azure, and many other national and international publications. From 2011 to 2014, she was editor-in-chief of The Dance Current, Canada’s dance magazine. On diverse digital platforms, including dance international, pointe and tanz, Kathleen continues to investigate issues in performance and culture.</p>
+                                        In legacy print media, she has written for the Globe and Mail, the Toronto Star, NOW Weekly, Toronto Life Fashion, House and Home, Azure, and many other national and international publications. From 2011 to 2014, she was editor-in-chief of The Dance Current, Canada’s dance magazine. On diverse digital platforms, including dance international, pointe and tanz, Kathleen continues to investigate issues in performance and culture. In scholarly works, she is contributing to an upcoming anthology about dance on film to be published by Routledge in 2024.</p>
  
-                                    <p>Kathleen also has experience grant-writing, copy writing and creating marketing and promotional materials and white papers for a range of clients in the non-profit and cultural sectors. She is a long-standing Wikipedia contributor and editor and hosts regular write and edit-a-thons for arts communities across Canada. In scholarly works, she is contributing to an upcoming anthology about dance on film to be published by Routledge in 2024.</p>
- 
-                                    <p>Kathleen regularly experiments with fiction and creative non-fiction and is especially interested in the intersections between the two.
-                                    </p>
+
                                      <p>Download a <a href="writing/Kathleen%20Smith_CV__nolinks2023.pdf"> complete CV </a></p>
 								</section>
 								<section>
