--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                            <p><a href="https://writ3001.wordpress.com/by-kathleen-smith/">Link to online text</a></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/housemix2.png" class="image"><img src="images/thumbs/Kamino_reviews.png" alt="" /></a>
+							<a href="images/fulls/housemix2.png" class="image"><img src="images/thumbs/Kamino_reviews.png" alt="naked dancer with long black hair" /></a>
 							<h2>Reviews</h2>
                             <p>In the performing arts criticism space, Kathleen has written reviews for the Globe and Mail, the Toronto Star, and many Canadian and international publications. She covered dance for NOW Weekly from 2012 to 2020 and was editor in chief for The Dance Current, Canada’s dance magazine from 2011 to 2014. Check the links below for a selection of online theatre and dance reviews.</p>
                             <a href="writing/HouseofMirth.pdf">Globe and Mail</a><br>
@@ -84,7 +84,7 @@
                             <p></p>
 						</article>            
 						<article class="thumb">
-							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="" /></a>
+							<a href="images/fulls/HelenPickett2.png" class="image"><img src="images/thumbs/pickett.jpg" alt="choreographer demonstrating movement to dancers" /></a>
                             <h2>Profile: Helen Pickett</h2>
                             <p>November 2023 / Pointe Magazine</p>
                             <p>Excerpt:<i>"I have wondered at times if Flaubert was a synesthete because of his descriptions,” says Pickett. “I mean, you can taste the apricot, you can smell Emma’s garden, you can see the texture of her dress. All of that is great fun for someone like me, a choreographer that lives in the senses. I want to break the fourth wall and have the work land on the audience’s skin".</i></p>
