--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                         In legacy print media, she has written for the Globe and Mail, the Toronto Star, NOW Weekly, Toronto Life Fashion, House and Home, Azure, and many other national and international publications. From 2011 to 2014, she was editor-in-chief of The Dance Current, Canada’s dance magazine. On diverse digital platforms, including dance international, pointe and tanz, Kathleen continues to investigate issues in performance and culture. In scholarly works, she is contributing to an upcoming anthology about dance on film to be published by Routledge in 2024.</p>
  
 
-                                     <p>Download a <a href="writing/Kathleen%20Smith_CV__nolinks2023.pdf"> complete CV </a></p>
+                                     <p>Download a <a href="writing/KMS_Resume_Writing.pdf"> full CV </a></p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
