--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<h2>Kathleen Smith's Writing Samples ↓ →</h2>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/forsythe_collage2.png" class="image"><img src="images/thumbs/forsythe.png" alt="" /></a>
+							<a href="images/fulls/forsythe_collage2.png" class="image"><img src="images/thumbs/forsythe.png" alt="collage with dancers and coloured circles" /></a>
 							<h2>Feature: Breaking Convention: Physical Thinking with William Forsythe</h2>
                             <p> May 2019 /feature essay for NBoC's live performance print program and Ballet+ online platform</p><br>
                           
