--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                            <p><a href="https://national.ballet.ca/Ballet-News-Plus/Archive/William-Forsythe">Link to online text</a></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/AI_collage3.png" class="image"><img src="images/thumbs/AI_hands.png" alt="" /></a>
+							<a href="images/fulls/AI_collage3.png" class="image"><img src="images/thumbs/AI_hands.png" alt="clasped hands holding coloured beads" /></a>
 							<h2>Feature: How I Stopped Worrying and Learned to Love the Mess That is AI Image Generation</h2>
 							<p>March 2023 / digital scholarship Demon Archives Project for WRIT3001 at York University</p><br>
                             <p> Excerpt:<i> “Most image generators work in the same general way. You fill in a text prompt, and the platform generates new image options using training sets of existing art (mostly scraped from an online database of images called LAION-5B) that have been diffused down to “noise”, then reassembled into something new...Experimentation with the language of text prompts and endlessly fine-tuning the results is strangely fun and satisfying.”</i></p>
