--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             
                         </article>
 						<article class="thumb">
-							<a href="images/fulls/siphe4.png" class="image"><img src="images/thumbs/Siphe.png" alt="" /></a>
+							<a href="images/fulls/siphe4.png" class="image"><img src="images/thumbs/Siphe.png" alt="dancer in casual dress posing for camera" /></a>
 							<h2>Profile: Siphe November </h2>
 				            <p>January 2022 / Pointe Magazine</p>
                              
