--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <p> May 2019 /feature essay for NBoC's live performance print program and Ballet+ online platform</p><br>
                           
                             <p> Excerpt:<i> “<strong>Approximate Sonata 2016</strong> wraps precision in a laissez faire attitude. It’s a deceptively casual series of linked duets, with movement that rapidly accumulates and layers like a multi-exposure photograph. Once again working with Thom Willems, Forsythe asks dancers to skim through unpredictable technical challenges as the music morphs in mood and tempo... In all three works, Forsythe combines an enthusiasm for legacy elements such as pointe work with radical phrasing and pace, torqued shapes and an absence of the gender specificities of many ballets, both traditional and contemporary.”</i></p>
-                           <a href="writing/William Forsythe_The National Ballet of Canada.pdf">Download</a>
+                           <a href="writing/Forsythe.pdf">Download</a>
                            <p><a href="https://national.ballet.ca/Ballet-News-Plus/Archive/William-Forsythe">Link to online text</a></p>
 						</article>
                         <article class="thumb">
