--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                            <p><a href="https://writ3001.wordpress.com/by-kathleen-smith/">Link to online text</a></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/housemix2.png" class="image"><img src="images/thumbs/Kamino_reviews.png" alt="naked dancer with long black hair" /></a>
+							<a href="images/fulls/housemix2.png" alt="naked man with long hair" class="image"><img src="images/thumbs/Kamino_reviews.png" alt="three dancers smiling and moving" /></a>
 							<h2>Reviews</h2>
                             <p>In the performing arts criticism space, Kathleen has written reviews for the Globe and Mail, the Toronto Star, and many Canadian and international publications. She covered dance for NOW Weekly from 2012 to 2020 and was editor in chief for The Dance Current, Canada’s dance magazine from 2011 to 2014. Check the links below for a selection of online theatre and dance reviews.</p>
                             <a href="writing/HouseofMirth.pdf">Globe and Mail</a><br>
