--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/taler2.png" class="image"><img src="images/thumbs/taler_2.png" alt="art gallery installation with projected image of artist" /></a>
+							<a href="images/fulls/taler2.png" alt="art gallery installation with projected image of artist" class="image"><img src="images/thumbs/taler_2.png" alt="" /></a>
 							<h2>Essay: Migrating Meaning </h2> 
 							<p>March 2023/ Collection Regards Hybrides</p>
                             <p>In addition to serving on the programming committee for Collection Regards Hybrides archive of dance on film and video, Kathleen contributed an online essay that explores the work of filmmaker and artist Laura Taler.</p>
