--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <p></p>
 						</article>
                          <article class="thumb">
-							<a href="images/fulls/evolving3.png" class="image"><img src="images/thumbs/orange_magpies.png" alt="projection on front of BVancouver Art Gallery" /></a>
+							<a href="images/fulls/evolving3.png" alt="closeup hands in dirt" class="image"><img src="images/thumbs/orange_magpies.png" alt="projection on front of Vancouver Art Gallery" /></a>
 							<h2>Feature: The Evolving Story of Dance on Film</h2>
 							<p>May 2018  / Dance International print and online</p>
                             <p>Excerpt:<i> "Evann Siebens, an ex-dancer and accomplished cameraperson, rode the dancefilm wave in the ’90s. Siebens’ dance experience continues to colour her ideas about filmmaking: “In the filmmaking world, if you don’t storyboard, if you don’t have an entire film pre-visualized and drawn out, you’re seen as a ‘bad’ filmmaker,” she says. “In the contemporary dance world, if you come in with your dance completely written and storyboarded, then you’re seen as a ‘bad’ choreographer. ”</i></p>
@@ -104,7 +104,7 @@
                              <p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/boreal5.png" class="image"><img src="images/thumbs/boreal_forest_canada-2850.jpg" alt="boreal forest trees" /></a>
+							<a href="images/fulls/boreal5.png" alt="boreal forest trees" class="image"><img src="images/thumbs/boreal_forest_canada-2850.jpg" alt="boreal forest trees" /></a>
 							<h2>Fiction: Boreal</h2>
                             <p>2022 / short story</p>
 							<p>Excerpt:<i>"The map maker labours long into the night tracing the edge of the Boreal on the
