--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						</article>
                        
                         <article class="thumb">
-							<a href="images/fulls/academic.png" class="image"><img src="images/thumbs/joyce.jpeg" alt="cartoon of writer James Joyce" /></a>
+							<a href="images/fulls/academic.png" alt="wispy spring flowers" class="image"><img src="images/thumbs/joyce.jpeg" alt="cartoon of writer James Joyce" /></a>
 							<h2>Academic: Love, Death and Modernity</h2>
                             <p>2023 / All That Is Solid Melts into Air: Visions of Love, Death and Modernity in James Joyce’s “The Dead” and Virginia Woolf’s “Kew Gardens”</p>
 							<p>Excerpt:<i>"Woolf uses heat in the same way Joyce uses snow: as a mechanism for neutralizing the drama of the human interaction, casting a film-y haze over the proceedings, dulling certainty and lines of division. Sounds of technological progress and the urban environment – “the drone of the aeroplane”, the grinding of omnibuses changing gears, the “murmuring” of the city – peep through, punctuating the miasma" (Woolf 52)</i></p>
@@ -123,13 +123,13 @@
                             <p></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/dancepluswords2.png" class="image"><img src="images/thumbs/dancepluswords.png" alt="hands at a computer and with a pen" /></a>
+							<a href="images/fulls/dancepluswords2.png" alt="hands with pen" class="image"><img src="images/thumbs/dancepluswords.png" alt="hands at a computer and with a pen" /></a>
 							<h2>dance+words collective</h2>
 							<p>An initiative to disseminate ideas and facilitate conversations around dance and movement arts across Canada, dance + words aims to combine old school journalistic values with new technological tools and an inter-generational, inclusive, respectful and curious attitude towards thinking about and engaging with the Canadian dance scene. Recent projects include the Wikipedia Dance Project, Critical Conversations podcast and a filmed exploration of the concept of archive.</p>
                             <p><a href="https://dancepluswords.ca/">Link to the website</a></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/webdesignbackfull.png" class="image"><img src="images/thumbs/louise4.png" alt="frying pan and vegetables being tossed" /></a>
+							<a href="images/fulls/webdesignbackfull.png" alt="woman in cat pose drinking water class="image"><img src="images/thumbs/louise4.png" alt="frying pan and vegetables being tossed" /></a>
 							<h2>Web Design</h2>
 							<p>Kathleen merges writing and design skills in her web design practice. Clients in the cultural community appreciate her attention to detail and dedication to creating clear and precise web presence, whether sites are built from scratch or customized builder platforms.</p> 
                             <p>Check out some of her current projects:</p> 
