--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 						</article>
                         <article class="thumb">
 							<a href="images/fulls/webdesignbackfull.png" class="image"><img src="images/thumbs/louise4.png" alt="" /></a>
+				<a href="images/fulls/dancepluswords2.png" alt="hands with pen" class="image"><img src="images/thumbs/dancepluswords.png" alt="hands at a computer and with a pen" /></a>
 							<h2>Web Design</h2>
 							<p>Kathleen merges writing and design skills in her web design practice. Clients in the cultural community appreciate her attention to detail and dedication to creating clear and precise web presence, whether sites are built from scratch or customized builder platforms.</p> 
                             <p>Check out some of her current projects:</p> 
