--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <p><a href="https://dancepluswords.ca/">Link to the website</a></p>
 						</article>
                         <article class="thumb">
-							<a href="images/fulls/webdesignbackfull.png" class="image"><img src="images/thumbs/louise4.png" alt="" /></a>
+							<a href="images/fulls/webdesignbackfull.png" class="image"><img src="images/thumbs/louise4.png" alt="woman on all fours drinking a glass of water" /></a>
 							<h2>Web Design</h2>
 							<p>Kathleen merges writing and design skills in her web design practice. Clients in the cultural community appreciate her attention to detail and dedication to creating clear and precise web presence, whether sites are built from scratch or customized builder platforms.</p> 
                             <p>Check out some of her current projects:</p> 
